--- a/WaterDepthOverlay/i18n/zh.json
+++ b/WaterDepthOverlay/i18n/zh.json
@@ -2,8 +2,9 @@
   // 主要选项部分
   "config.title.mainoptions": "主要选项",
   "config.enable.name": "启用",
+  "config.enable.desc": "当启用这个选项时，即使没有按下绘制遮罩的快捷键，\n模组也会在后台缓存一些水深数据。\n如果你想削减这些计算消耗，可以关闭此选项，\n否则我建议你保持启用此选项。",
   "config.enable-overlay.name": "遮罩显示开关快捷键",
-  "config.enable-overlay.desc": "按下它可以打开/关闭覆盖。",
+  "config.enable-overlay.desc": "按下它可以开始绘制/停止绘制遮罩。",
   "config.draw-overlay-on-top.name": "是否在顶层绘制遮罩",
   // 水网格颜色部分
   "config.title.fishable": "可钓鱼的网格遮罩颜色(RGBA)",
@@ -19,5 +20,7 @@
   "config.building-overlay-color.desc": "具有此属性的网格通常是被建筑物、桥梁、滨岸等覆盖。",
   "config.enable-nofishing-overlay.name": "是否绘制遮罩",
   "config.nofishing-color.name": "此处禁止钓鱼",
-  "config.nofishing-color.desc": "此属性很少使用，由地图网格的“NoFishing”属性定义。\n具有此属性的水网格通常被其他物体覆盖。\n在星露谷物语1.6.15中，只有两张地图的网格具有此属性。\n其中之一是海滩（夜市）。此属性似乎是为了\n防止玩家抛掷浮标到节日期间刷新的船只等物体上。\n另一张地图是深山。具有此属性的网格\n通常是被闪闪发光的巨石遮住，\n巨石在完成特色鱼收集包后会被移除。"
+  "config.nofishing-color.desc": "此属性很少使用，由地图网格的“NoFishing”属性定义。\n具有此属性的水网格通常被其他物体覆盖。\n在星露谷物语1.6.15中，只有两张地图的网格具有此属性。\n其中之一是海滩（夜市）。此属性似乎是为了\n防止玩家抛掷浮标到节日期间刷新的船只等物体上。\n另一张地图是深山。具有此属性的网格\n通常是被闪闪发光的巨石遮住，\n巨石在完成特色鱼收集包后会被移除。",
+  "message.enable-overlay": "开始绘制遮罩",
+  "message.disable-overlay": "停止绘制遮罩"
 }
